--- a/flow_generated/tsconfig-files.json
+++ b/flow_generated/tsconfig-files.json
@@ -3,6 +3,9 @@
     "../flow_generated/flow/main.ts",
     "../flow_generated/flow/routes.ts",
     "../flow_generated/flow/server.ts",
+    "../flow_generated/types/aliceCo/gtfs/columbus/realtime/alerts/Alerts.pb.d.ts",
+    "../flow_generated/types/aliceCo/gtfs/columbus/realtime/trip-updates/TripUpdates.pb.d.ts",
+    "../flow_generated/types/aliceCo/gtfs/columbus/realtime/vehicle-positions/VehiclePositions.pb.d.ts",
     "../flow_generated/types/aliceCo/gtfs4/static/agency.txt.d.ts",
     "../flow_generated/types/aliceCo/gtfs4/static/calendar.txt.d.ts",
     "../flow_generated/types/aliceCo/gtfs4/static/calendar_dates.txt.d.ts",
